 /* $Id: changelog,v 1.864 2000-04-05 18:44:22 bird Exp $ */

 2000-04-05: Knut St. Osmundsen <knut.stange.osmundsen@pmsc.no>
        - Win32k: Added fixpack 13 symbols to the symbol database.
                Using win32k.sys with fp13 works fine here.

 2000-04-05: Sander van Leeuwen <sandervl@xs4all.nl>
	- WINMM: Smallest waveout buffer size = 128 bytes
                Fixed callback bugs (reported by Michal Necasek)

 2000-04-03: David Raison <djr@lemur.co.uk>
 	- OLE32: Added CoCreateGUID (calls RPCRT4.UuidCreate)
 	- RPCRT4: Beginning of new dll:
	    RpcStringFreeA, RpcStringFreeW, UuidCompare
	    UuidCreate, UuidCreateNil, UuidEqual
	    UuidFromStringA, UuidFromStringW, UuidHash
	    UuidIsNil, UuidToStringA, UuidToStringW

 2000-04-02: Przemyslaw Dobrowolski <dobrawka@asua.org.pl>
	- SHELL32: don't sort files case sensitive

 2000-04-02: Christoph Bratschi <cbratschi@datacomm.ch>
	- KERNEL32: FindFirst: don't return "." and ".." in root
		    wrote long to short name conversion
		    added error code converter
	- USER32: removed 'What You See Is What You Get On First Of April'

 2000-04-02: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32: dc.cpp cleanup
	- GDI32:  Dib section sync bugfix (todo: rgb 565 to 555 conversion if bpp == 16)
                  Set y inversion to 0 if dib section isn't flipped
                  (fixes upside down flash videos in RealPlayer 7)
	- WINMM:  Faked mixer apis

 2000-04-01: Sander van Leeuwen <sandervl@xs4all.nl>
	- GDI32: Fixed dibsection bitblits. (wrong updates of realplayer 7
                 videos)

 2000-04-01: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: added WYSIWYGOFOA interface

 2000-04-01: Edgar Buerkle <Edgar.Buerkle@gmx.net>
        - USER32: Fixed track frame width & height (now you can actually
                  see the tracking frame when moving a window)

 2000-03-31: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: readded CS_HITTEST for HT_TRANSPARENT handling, transparent