@@ -1,4 +1,7 @@
- /* $Id: changelog,v 1.864 2000-04-05 18:44:22 bird Exp $ */
+ /* $Id: changelog,v 1.865 2000-04-05 22:25:47 davidr Exp $ */
+
+ 2000-04-05: David Raison <djr@lemur.co.uk>
+        - OLEAUT32: Turned default DEBUG-info down.
 
  2000-04-05: Knut St. Osmundsen <knut.stange.osmundsen@pmsc.no>
         - Win32k: Added fixpack 13 symbols to the symbol database.
